// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewsletterModal
    subscribeNewsletterDescription="foo"
    subscribeNewsletterTitle="foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex flex-row items-center justify-between"
>
          <p
                    className="px1 text-peach"
          >
                    foo
          </p>
          <Button
                    childrenWrapperClassName=""
                    className="mx1"
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    openInCurrentTab={false}
                    shadow={false}
                    to=""
                    type="button"
                    variant="style-none"
          >
                    <Image
                              alt="Close button"
                              bg={false}
                              className="w100"
                              onImgLoad={[Function]}
                              src="/assets/images/close-icon-navy.svg"
                              style={Object {}}
                    />
          </Button>
</div>,
        <p
          className="block-subheadline pl1 pr3"
>
          foo
</p>,
        <MailchimpSubscribe
          render={[Function]}
          url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
      ],
      "className": "fixed z-nav bg-white card drop-shadow-xlarge px1 py2 mx2 r0",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="px1 text-peach"
>
              foo
</p>,
            <Button
              childrenWrapperClassName=""
              className="mx1"
              color="white-denim"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label=""
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              openInCurrentTab={false}
              shadow={false}
              to=""
              type="button"
              variant="style-none"
>
              <Image
                            alt="Close button"
                            bg={false}
                            className="w100"
                            onImgLoad={[Function]}
                            src="/assets/images/close-icon-navy.svg"
                            style={Object {}}
              />
</Button>,
          ],
          "className": "flex flex-row items-center justify-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "px1 text-peach",
            },
            "ref": null,
            "rendered": "foo",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Image
                alt="Close button"
                bg={false}
                className="w100"
                onImgLoad={[Function]}
                src="/assets/images/close-icon-navy.svg"
                style={Object {}}
/>,
              "childrenWrapperClassName": "",
              "className": "mx1",
              "color": "white-denim",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
              "openInCurrentTab": false,
              "shadow": false,
              "to": "",
              "type": "button",
              "variant": "style-none",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "Close button",
                "bg": false,
                "children": null,
                "className": "w100",
                "onImgLoad": [Function],
                "src": "/assets/images/close-icon-navy.svg",
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "foo",
          "className": "block-subheadline pl1 pr3",
        },
        "ref": null,
        "rendered": "foo",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "render": [Function],
          "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex flex-row items-center justify-between"
>
            <p
                        className="px1 text-peach"
            >
                        foo
            </p>
            <Button
                        childrenWrapperClassName=""
                        className="mx1"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
            >
                        <Image
                                    alt="Close button"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="/assets/images/close-icon-navy.svg"
                                    style={Object {}}
                        />
            </Button>
</div>,
          <p
            className="block-subheadline pl1 pr3"
>
            foo
</p>,
          <MailchimpSubscribe
            render={[Function]}
            url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
        ],
        "className": "fixed z-nav bg-white card drop-shadow-xlarge px1 py2 mx2 r0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="px1 text-peach"
>
                foo
</p>,
              <Button
                childrenWrapperClassName=""
                className="mx1"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to=""
                type="button"
                variant="style-none"
>
                <Image
                                alt="Close button"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="/assets/images/close-icon-navy.svg"
                                style={Object {}}
                />
</Button>,
            ],
            "className": "flex flex-row items-center justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "px1 text-peach",
              },
              "ref": null,
              "rendered": "foo",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Image
                  alt="Close button"
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="/assets/images/close-icon-navy.svg"
                  style={Object {}}
/>,
                "childrenWrapperClassName": "",
                "className": "mx1",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "style-none",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Close button",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "/assets/images/close-icon-navy.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "foo",
            "className": "block-subheadline pl1 pr3",
          },
          "ref": null,
          "rendered": "foo",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "render": [Function],
            "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NewsletterModal
    subscribeNewsletterDescription=""
    subscribeNewsletterTitle="Subscribe to our newsletter!"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex flex-row items-center justify-between"
>
          <p
                    className="px1 text-peach"
          >
                    Subscribe to our newsletter!
          </p>
          <Button
                    childrenWrapperClassName=""
                    className="mx1"
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    openInCurrentTab={false}
                    shadow={false}
                    to=""
                    type="button"
                    variant="style-none"
          >
                    <Image
                              alt="Close button"
                              bg={false}
                              className="w100"
                              onImgLoad={[Function]}
                              src="/assets/images/close-icon-navy.svg"
                              style={Object {}}
                    />
          </Button>
</div>,
        null,
        <MailchimpSubscribe
          render={[Function]}
          url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
      ],
      "className": "fixed z-nav bg-white card drop-shadow-xlarge px1 py2 mx2 r0",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="px1 text-peach"
>
              Subscribe to our newsletter!
</p>,
            <Button
              childrenWrapperClassName=""
              className="mx1"
              color="white-denim"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label=""
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              openInCurrentTab={false}
              shadow={false}
              to=""
              type="button"
              variant="style-none"
>
              <Image
                            alt="Close button"
                            bg={false}
                            className="w100"
                            onImgLoad={[Function]}
                            src="/assets/images/close-icon-navy.svg"
                            style={Object {}}
              />
</Button>,
          ],
          "className": "flex flex-row items-center justify-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Subscribe to our newsletter!",
              "className": "px1 text-peach",
            },
            "ref": null,
            "rendered": "Subscribe to our newsletter!",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Image
                alt="Close button"
                bg={false}
                className="w100"
                onImgLoad={[Function]}
                src="/assets/images/close-icon-navy.svg"
                style={Object {}}
/>,
              "childrenWrapperClassName": "",
              "className": "mx1",
              "color": "white-denim",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
              "openInCurrentTab": false,
              "shadow": false,
              "to": "",
              "type": "button",
              "variant": "style-none",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "Close button",
                "bg": false,
                "children": null,
                "className": "w100",
                "onImgLoad": [Function],
                "src": "/assets/images/close-icon-navy.svg",
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "render": [Function],
          "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex flex-row items-center justify-between"
>
            <p
                        className="px1 text-peach"
            >
                        Subscribe to our newsletter!
            </p>
            <Button
                        childrenWrapperClassName=""
                        className="mx1"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
            >
                        <Image
                                    alt="Close button"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="/assets/images/close-icon-navy.svg"
                                    style={Object {}}
                        />
            </Button>
</div>,
          null,
          <MailchimpSubscribe
            render={[Function]}
            url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
        ],
        "className": "fixed z-nav bg-white card drop-shadow-xlarge px1 py2 mx2 r0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="px1 text-peach"
>
                Subscribe to our newsletter!
</p>,
              <Button
                childrenWrapperClassName=""
                className="mx1"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to=""
                type="button"
                variant="style-none"
>
                <Image
                                alt="Close button"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="/assets/images/close-icon-navy.svg"
                                style={Object {}}
                />
</Button>,
            ],
            "className": "flex flex-row items-center justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Subscribe to our newsletter!",
                "className": "px1 text-peach",
              },
              "ref": null,
              "rendered": "Subscribe to our newsletter!",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Image
                  alt="Close button"
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="/assets/images/close-icon-navy.svg"
                  style={Object {}}
/>,
                "childrenWrapperClassName": "",
                "className": "mx1",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "style-none",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Close button",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "/assets/images/close-icon-navy.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "render": [Function],
            "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
